[package]
name = "godot_ebur128"
description = "ebur128 GDNative Module for Project Heartbeat"
version = "0.1.0"
authors = ["Álex Román Núñez <eirexe123@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.0-preview.0"
lewton = "0.10.1"
ebur128 = "0.1.5"
discord_game_sdk = { git = "https://github.com/EIRTeam/discord_game_sdk.git" }

[profile.dev.package."*"]
opt-level = 3
