[package]
name = "godot_audio_utils"
description = "ebur128 GDNative Module for Project Heartbeat"
version = "0.1.0"
authors = ["Álex Román Núñez <eirexe123@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "AGPL-3.0-or-later"
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/godot-rust/godot-rust", rev="e131df2" }
lewton = { git = "https://github.com/RustAudio/lewton.git", rev="2222700" }
ebur128 = { git = "https://github.com/sdroege/ebur128.git", rev="95d991c" }
hound = "3.4.0"

[profile.dev.package."*"]
opt-level = 3
